[gd_scene load_steps=39 format=3 uid="uid://cgo6l0386rbuo"]

[ext_resource type="Script" path="res://scenes/player/animated_player.gd" id="1_b2sen"]
[ext_resource type="Texture2D" uid="uid://ca5wohxc82ago" path="res://assets/sprites/player_swing.png" id="3_fx2li"]
[ext_resource type="Texture2D" uid="uid://qltesptxo6c7" path="res://assets/sprites/player_simple.png" id="3_mxhkr"]
[ext_resource type="PackedScene" uid="uid://blr0j5erf181a" path="res://scenes/player/player_hud.tscn" id="4_f16uc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qx3if"]
size = Vector2(30, 14)

[sub_resource type="Animation" id="Animation_mymb3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mpbai"]
resource_name = "swing"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2hy75"]
_data = {
"RESET": SubResource("Animation_mymb3"),
"swing": SubResource("Animation_mpbai")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n478x"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u3ik0"]
animation = &"swing"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vb8ip"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_10upw"]
states/End/position = Vector2(581, 100)
states/RESET/node = SubResource("AnimationNodeAnimation_n478x")
states/RESET/position = Vector2(384, 199)
states/swing/node = SubResource("AnimationNodeAnimation_u3ik0")
states/swing/position = Vector2(384, 100)
transitions = ["swing", "RESET", SubResource("AnimationNodeStateMachineTransition_vb8ip")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4k7vu"]
size = Vector2(12, 18)

[sub_resource type="Animation" id="Animation_68vhm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_epcaw"]
resource_name = "idle_down"
length = 0.5333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5x71j"]
resource_name = "idle_left"
length = 0.5333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_lylw1"]
resource_name = "idle_right"
length = 0.5333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_nlk2x"]
resource_name = "idle_up"
length = 0.53
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_icoqw"]
resource_name = "walk_down"
length = 0.53
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_n3owa"]
resource_name = "walk_left"
length = 0.5333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_pqpqk"]
resource_name = "walk_right"
length = 0.5333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_v27qo"]
resource_name = "walk_up"
length = 0.53
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t734g"]
_data = {
"RESET": SubResource("Animation_68vhm"),
"idle_down": SubResource("Animation_epcaw"),
"idle_left": SubResource("Animation_5x71j"),
"idle_right": SubResource("Animation_lylw1"),
"idle_up": SubResource("Animation_nlk2x"),
"walk_down": SubResource("Animation_icoqw"),
"walk_left": SubResource("Animation_n3owa"),
"walk_right": SubResource("Animation_pqpqk"),
"walk_up": SubResource("Animation_v27qo")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d8l8x"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4rmhk"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6f52r"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_28a3e"]
animation = &"idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_3p81s"]
blend_point_0/node = SubResource("AnimationNodeAnimation_d8l8x")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_4rmhk")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_6f52r")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_28a3e")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_role1"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1dgre"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_02ynk"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8m3by"]
animation = &"walk_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_r2jlf"]
blend_point_0/node = SubResource("AnimationNodeAnimation_role1")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_1dgre")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_02ynk")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_8m3by")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ch7l7"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_86uqt"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_orcxf"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_5v30f"]
states/End/position = Vector2(1131, 89)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_3p81s")
states/Idle/position = Vector2(437, 106)
states/Start/position = Vector2(284, 106)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_r2jlf")
states/Walk/position = Vector2(662, 106)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_ch7l7"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_86uqt"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_orcxf")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_it57e"]
size = Vector2(32, 24)

[node name="AnimatedPlayer" type="CharacterBody2D" groups=["player"]]
collision_layer = 20
collision_mask = 35
script = ExtResource("1_b2sen")

[node name="MeleeWeapon" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 66

[node name="WeaponSprite" type="Sprite2D" parent="MeleeWeapon"]
visible = false
position = Vector2(0, -5)
texture = ExtResource("3_fx2li")
hframes = 4

[node name="WeaponCollision" type="CollisionShape2D" parent="MeleeWeapon"]
position = Vector2(1, -11)
shape = SubResource("RectangleShape2D_qx3if")
disabled = true

[node name="MeleeAnimationPlayer" type="AnimationPlayer" parent="MeleeWeapon"]
libraries = {
"": SubResource("AnimationLibrary_2hy75")
}

[node name="MeleeAnimationTree" type="AnimationTree" parent="MeleeWeapon"]
tree_root = SubResource("AnimationNodeStateMachine_10upw")
anim_player = NodePath("../MeleeAnimationPlayer")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("3_mxhkr")
hframes = 4
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4k7vu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t734g")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_5v30f")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(0.0273973, 0.554167)
parameters/Walk/blend_position = Vector2(0.445732, 0.6375)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[node name="PlayerHUD" parent="Camera2D" instance=ExtResource("4_f16uc")]

[node name="BuildArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="BuildCollision" type="CollisionShape2D" parent="BuildArea"]
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_it57e")

[connection signal="attack_pressed" from="." to="." method="_on_attack_pressed"]
[connection signal="player_death" from="." to="Camera2D/PlayerHUD" method="_on_player_death"]
[connection signal="body_entered" from="MeleeWeapon" to="." method="melee_damage"]
